@@ -1,1 +1,1 @@
-@CPPFLAGS@ @PQXX_CXX_VERSION@
+@CPPFLAGS@ @CXXFLAGS@
